data/intermediate/generated/parser/REST/RESTParser.py
# Generated from /Users/annaellebaiget/Desktop/MS_Thesis/ExplainFuzz/data/intermediate/grammars/final/REST/RESTParser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RESTParser ( Parser ):

    grammarFileName = "RESTParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.. _'", "':'", "'_'", "'. '", "'='", 
                     "'-'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\\n'" ]

    symbolicNames = [ "<INVALID>", "TERM_0", "TERM_1", "TERM_2", "TERM_3", 
                      "TERM_4", "TERM_5", "PARAGRAPH_CHAR", "PARAGRAPH_CHAR_NOSPACE", 
                      "PRESEP", "POSTSEP", "ID", "DIGIT_NONZERO", "DIGIT", 
                      "NOBR_CHAR", "TITLE_FIRST_CHAR", "NEWLINE" ]

    RULE_start = 0
    RULE_bodyElements = 1
    RULE_bodyElement = 2
    RULE_sectionTitle = 3
    RULE_titleText = 4
    RULE_paragraph = 5
    RULE_labeledParagraph = 6
    RULE_label = 7
    RULE_paragraphElements = 8
    RULE_firstParagraphElement = 9
    RULE_paragraphElement = 10
    RULE_internalReference = 11
    RULE_internalReferenceNoSpace = 12
    RULE_enumeration = 13
    RULE_enumerationItems = 14
    RULE_enumerationItem = 15
    RULE_paragraphChars = 16
    RULE_paragraphCharsNoSpace = 17
    RULE_paragraphChar = 18
    RULE_paragraphCharNoSpace = 19
    RULE_presep = 20
    RULE_postsep = 21
    RULE_id = 22
    RULE_number = 23
    RULE_digitNonZero = 24
    RULE_digits = 25
    RULE_digit = 26
    RULE_nobrString = 27
    RULE_nobrChar = 28
    RULE_titleFirstChar = 29
    RULE_underline = 30
    RULE_eqs = 31
    RULE_dashes = 32

    ruleNames =  [ "start", "bodyElements", "bodyElement", "sectionTitle", 
                   "titleText", "paragraph", "labeledParagraph", "label", 
                   "paragraphElements", "firstParagraphElement", "paragraphElement", 
                   "internalReference", "internalReferenceNoSpace", "enumeration", 
                   "enumerationItems", "enumerationItem", "paragraphChars", 
                   "paragraphCharsNoSpace", "paragraphChar", "paragraphCharNoSpace", 
                   "presep", "postsep", "id", "number", "digitNonZero", 
                   "digits", "digit", "nobrString", "nobrChar", "titleFirstChar", 
                   "underline", "eqs", "dashes" ]

    EOF = Token.EOF
    TERM_0=1
    TERM_1=2
    TERM_2=3
    TERM_3=4
    TERM_4=5
    TERM_5=6
    PARAGRAPH_CHAR=7
    PARAGRAPH_CHAR_NOSPACE=8
    PRESEP=9
    POSTSEP=10
    ID=11
    DIGIT_NONZERO=12
    DIGIT=13
    NOBR_CHAR=14
    TITLE_FIRST_CHAR=15
    NEWLINE=16

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bodyElements(self):
            return self.getTypedRuleContext(RESTParser.BodyElementsContext,0)


        def EOF(self):
            return self.getToken(RESTParser.EOF, 0)

        def getRuleIndex(self):
            return RESTParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = RESTParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.bodyElements()
            self.state = 67
            self.match(RESTParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyElementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bodyElement(self):
            return self.getTypedRuleContext(RESTParser.BodyElementContext,0)


        def NEWLINE(self):
            return self.getToken(RESTParser.NEWLINE, 0)

        def bodyElements(self):
            return self.getTypedRuleContext(RESTParser.BodyElementsContext,0)


        def getRuleIndex(self):
            return RESTParser.RULE_bodyElements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBodyElements" ):
                listener.enterBodyElements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBodyElements" ):
                listener.exitBodyElements(self)




    def bodyElements(self):

        localctx = RESTParser.BodyElementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bodyElements)
        try:
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.bodyElement()
                self.state = 70
                self.match(RESTParser.NEWLINE)
                self.state = 71
                self.bodyElements()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.bodyElement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sectionTitle(self):
            return self.getTypedRuleContext(RESTParser.SectionTitleContext,0)


        def NEWLINE(self):
            return self.getToken(RESTParser.NEWLINE, 0)

        def labeledParagraph(self):
            return self.getTypedRuleContext(RESTParser.LabeledParagraphContext,0)


        def paragraph(self):
            return self.getTypedRuleContext(RESTParser.ParagraphContext,0)


        def enumeration(self):
            return self.getTypedRuleContext(RESTParser.EnumerationContext,0)


        def getRuleIndex(self):
            return RESTParser.RULE_bodyElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBodyElement" ):
                listener.enterBodyElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBodyElement" ):
                listener.exitBodyElement(self)




    def bodyElement(self):

        localctx = RESTParser.BodyElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bodyElement)
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.sectionTitle()
                self.state = 77
                self.match(RESTParser.NEWLINE)
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.labeledParagraph()
                pass
            elif token in [8, 11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                self.paragraph()
                pass
            elif token in [12, 13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 81
                self.enumeration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SectionTitleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def titleText(self):
            return self.getTypedRuleContext(RESTParser.TitleTextContext,0)


        def NEWLINE(self):
            return self.getToken(RESTParser.NEWLINE, 0)

        def underline(self):
            return self.getTypedRuleContext(RESTParser.UnderlineContext,0)


        def getRuleIndex(self):
            return RESTParser.RULE_sectionTitle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSectionTitle" ):
                listener.enterSectionTitle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSectionTitle" ):
                listener.exitSectionTitle(self)




    def sectionTitle(self):

        localctx = RESTParser.SectionTitleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_sectionTitle)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.titleText()
            self.state = 85
            self.match(RESTParser.NEWLINE)
            self.state = 86
            self.underline()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TitleTextContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def titleFirstChar(self):
            return self.getTypedRuleContext(RESTParser.TitleFirstCharContext,0)


        def nobrString(self):
            return self.getTypedRuleContext(RESTParser.NobrStringContext,0)


        def getRuleIndex(self):
            return RESTParser.RULE_titleText

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTitleText" ):
                listener.enterTitleText(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTitleText" ):
                listener.exitTitleText(self)




    def titleText(self):

        localctx = RESTParser.TitleTextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_titleText)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.titleFirstChar()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.titleFirstChar()
                self.state = 90
                self.nobrString()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParagraphContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def firstParagraphElement(self):
            return self.getTypedRuleContext(RESTParser.FirstParagraphElementContext,0)


        def paragraphElements(self):
            return self.getTypedRuleContext(RESTParser.ParagraphElementsContext,0)


        def NEWLINE(self):
            return self.getToken(RESTParser.NEWLINE, 0)

        def getRuleIndex(self):
            return RESTParser.RULE_paragraph

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParagraph" ):
                listener.enterParagraph(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParagraph" ):
                listener.exitParagraph(self)




    def paragraph(self):

        localctx = RESTParser.ParagraphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paragraph)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.firstParagraphElement()
            self.state = 95
            self.paragraphElements()
            self.state = 96
            self.match(RESTParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabeledParagraphContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def label(self):
            return self.getTypedRuleContext(RESTParser.LabelContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(RESTParser.NEWLINE)
            else:
                return self.getToken(RESTParser.NEWLINE, i)

        def paragraph(self):
            return self.getTypedRuleContext(RESTParser.ParagraphContext,0)


        def getRuleIndex(self):
            return RESTParser.RULE_labeledParagraph

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabeledParagraph" ):
                listener.enterLabeledParagraph(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabeledParagraph" ):
                listener.exitLabeledParagraph(self)




    def labeledParagraph(self):

        localctx = RESTParser.LabeledParagraphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_labeledParagraph)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.label()
            self.state = 99
            self.match(RESTParser.NEWLINE)
            self.state = 100
            self.match(RESTParser.NEWLINE)
            self.state = 101
            self.paragraph()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TERM_0(self):
            return self.getToken(RESTParser.TERM_0, 0)

        def id_(self):
            return self.getTypedRuleContext(RESTParser.IdContext,0)


        def TERM_1(self):
            return self.getToken(RESTParser.TERM_1, 0)

        def getRuleIndex(self):
            return RESTParser.RULE_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel" ):
                listener.enterLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel" ):
                listener.exitLabel(self)




    def label(self):

        localctx = RESTParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_label)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(RESTParser.TERM_0)
            self.state = 104
            self.id_()
            self.state = 105
            self.match(RESTParser.TERM_1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParagraphElementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paragraphElement(self):
            return self.getTypedRuleContext(RESTParser.ParagraphElementContext,0)


        def paragraphElements(self):
            return self.getTypedRuleContext(RESTParser.ParagraphElementsContext,0)


        def getRuleIndex(self):
            return RESTParser.RULE_paragraphElements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParagraphElements" ):
                listener.enterParagraphElements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParagraphElements" ):
                listener.exitParagraphElements(self)




    def paragraphElements(self):

        localctx = RESTParser.ParagraphElementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paragraphElements)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.paragraphElement()
                self.state = 108
                self.paragraphElements()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.paragraphElement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FirstParagraphElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paragraphCharsNoSpace(self):
            return self.getTypedRuleContext(RESTParser.ParagraphCharsNoSpaceContext,0)


        def internalReferenceNoSpace(self):
            return self.getTypedRuleContext(RESTParser.InternalReferenceNoSpaceContext,0)


        def getRuleIndex(self):
            return RESTParser.RULE_firstParagraphElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFirstParagraphElement" ):
                listener.enterFirstParagraphElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFirstParagraphElement" ):
                listener.exitFirstParagraphElement(self)




    def firstParagraphElement(self):

        localctx = RESTParser.FirstParagraphElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_firstParagraphElement)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.paragraphCharsNoSpace()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.internalReferenceNoSpace()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParagraphElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paragraphChars(self):
            return self.getTypedRuleContext(RESTParser.ParagraphCharsContext,0)


        def internalReference(self):
            return self.getTypedRuleContext(RESTParser.InternalReferenceContext,0)


        def getRuleIndex(self):
            return RESTParser.RULE_paragraphElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParagraphElement" ):
                listener.enterParagraphElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParagraphElement" ):
                listener.exitParagraphElement(self)




    def paragraphElement(self):

        localctx = RESTParser.ParagraphElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paragraphElement)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.paragraphChars()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.internalReference()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InternalReferenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def presep(self):
            return self.getTypedRuleContext(RESTParser.PresepContext,0)


        def id_(self):
            return self.getTypedRuleContext(RESTParser.IdContext,0)


        def TERM_2(self):
            return self.getToken(RESTParser.TERM_2, 0)

        def postsep(self):
            return self.getTypedRuleContext(RESTParser.PostsepContext,0)


        def getRuleIndex(self):
            return RESTParser.RULE_internalReference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInternalReference" ):
                listener.enterInternalReference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInternalReference" ):
                listener.exitInternalReference(self)




    def internalReference(self):

        localctx = RESTParser.InternalReferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_internalReference)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.presep()
            self.state = 122
            self.id_()
            self.state = 123
            self.match(RESTParser.TERM_2)
            self.state = 124
            self.postsep()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InternalReferenceNoSpaceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(RESTParser.IdContext,0)


        def TERM_2(self):
            return self.getToken(RESTParser.TERM_2, 0)

        def postsep(self):
            return self.getTypedRuleContext(RESTParser.PostsepContext,0)


        def getRuleIndex(self):
            return RESTParser.RULE_internalReferenceNoSpace

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInternalReferenceNoSpace" ):
                listener.enterInternalReferenceNoSpace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInternalReferenceNoSpace" ):
                listener.exitInternalReferenceNoSpace(self)




    def internalReferenceNoSpace(self):

        localctx = RESTParser.InternalReferenceNoSpaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_internalReferenceNoSpace)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.id_()
            self.state = 127
            self.match(RESTParser.TERM_2)
            self.state = 128
            self.postsep()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumerationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def enumerationItems(self):
            return self.getTypedRuleContext(RESTParser.EnumerationItemsContext,0)


        def NEWLINE(self):
            return self.getToken(RESTParser.NEWLINE, 0)

        def getRuleIndex(self):
            return RESTParser.RULE_enumeration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumeration" ):
                listener.enterEnumeration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumeration" ):
                listener.exitEnumeration(self)




    def enumeration(self):

        localctx = RESTParser.EnumerationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_enumeration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.enumerationItems()
            self.state = 131
            self.match(RESTParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumerationItemsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def enumerationItem(self):
            return self.getTypedRuleContext(RESTParser.EnumerationItemContext,0)


        def NEWLINE(self):
            return self.getToken(RESTParser.NEWLINE, 0)

        def enumerationItems(self):
            return self.getTypedRuleContext(RESTParser.EnumerationItemsContext,0)


        def getRuleIndex(self):
            return RESTParser.RULE_enumerationItems

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumerationItems" ):
                listener.enterEnumerationItems(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumerationItems" ):
                listener.exitEnumerationItems(self)




    def enumerationItems(self):

        localctx = RESTParser.EnumerationItemsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_enumerationItems)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.enumerationItem()
                self.state = 134
                self.match(RESTParser.NEWLINE)
                self.state = 135
                self.enumerationItems()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.enumerationItem()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumerationItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(RESTParser.NumberContext,0)


        def TERM_3(self):
            return self.getToken(RESTParser.TERM_3, 0)

        def nobrString(self):
            return self.getTypedRuleContext(RESTParser.NobrStringContext,0)


        def getRuleIndex(self):
            return RESTParser.RULE_enumerationItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumerationItem" ):
                listener.enterEnumerationItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumerationItem" ):
                listener.exitEnumerationItem(self)




    def enumerationItem(self):

        localctx = RESTParser.EnumerationItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_enumerationItem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.number()
            self.state = 141
            self.match(RESTParser.TERM_3)
            self.state = 142
            self.nobrString()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParagraphCharsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paragraphChar(self):
            return self.getTypedRuleContext(RESTParser.ParagraphCharContext,0)


        def paragraphChars(self):
            return self.getTypedRuleContext(RESTParser.ParagraphCharsContext,0)


        def getRuleIndex(self):
            return RESTParser.RULE_paragraphChars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParagraphChars" ):
                listener.enterParagraphChars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParagraphChars" ):
                listener.exitParagraphChars(self)




    def paragraphChars(self):

        localctx = RESTParser.ParagraphCharsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_paragraphChars)
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.paragraphChar()
                self.state = 145
                self.paragraphChars()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.paragraphChar()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParagraphCharsNoSpaceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paragraphCharNoSpace(self):
            return self.getTypedRuleContext(RESTParser.ParagraphCharNoSpaceContext,0)


        def paragraphCharsNoSpace(self):
            return self.getTypedRuleContext(RESTParser.ParagraphCharsNoSpaceContext,0)


        def getRuleIndex(self):
            return RESTParser.RULE_paragraphCharsNoSpace

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParagraphCharsNoSpace" ):
                listener.enterParagraphCharsNoSpace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParagraphCharsNoSpace" ):
                listener.exitParagraphCharsNoSpace(self)




    def paragraphCharsNoSpace(self):

        localctx = RESTParser.ParagraphCharsNoSpaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_paragraphCharsNoSpace)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.paragraphCharNoSpace()
                self.state = 151
                self.paragraphCharsNoSpace()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.paragraphCharNoSpace()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParagraphCharContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAGRAPH_CHAR(self):
            return self.getToken(RESTParser.PARAGRAPH_CHAR, 0)

        def getRuleIndex(self):
            return RESTParser.RULE_paragraphChar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParagraphChar" ):
                listener.enterParagraphChar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParagraphChar" ):
                listener.exitParagraphChar(self)




    def paragraphChar(self):
